create devops docs tree

--- a/source/layouts/docs.erb
+++ b/source/layouts/docs.erb
@@ -192,6 +192,7 @@
             </ul>
           </li>
 
+<!--
           <li id="devicesTree">
             <a href="javascript:;">
             <i class="fa fa-cogs"></i>
@@ -229,6 +230,43 @@
               </li>
             </ul>
           </li>
+-->
+          <li id="devopsTree">
+            <a href="javascript:;">
+            <i class="fa fa-cogs"></i>
+
+            <span class="title">
+               DEVOPS
+            </span>
+            <span id="toolsSelected"></span>
+            <span id="toolssArrow"></span>
+            </a>
+            <ul class="sub-menu">
+              <li>
+                <a href="/docs/devops/index.html">
+                  Overview
+                </a>
+              </li>
+              <li>
+                <a href="/docs/devops/manually.html">
+                  Manually
+                </a>
+              </li>
+              <li>
+                <a href="/docs/devops/vagrant.html">
+                  Vagrant
+                </a>
+              </li>
+              <!--
+              <li>
+                <a href="/docs/tools/docker.html">
+                  Docker
+                </a>
+              </li>
+            -->
+            </ul>
+          </li>
+
           <li id="toolsTree">
             <a href="javascript:;">
             <i class="fa fa-cogs"></i>
@@ -241,15 +279,17 @@
             </a>
             <ul class="sub-menu">
               <li>
-                <a href="/docs/tools/n2.html">
+                <a href="/docs/tools/cli.html">
                   Command Line Interface
                 </a>
               </li>
+<!--
               <li>
                 <a href="/docs/tools/vagrant.html">
-                  Vagrant - Auto provision server VMs
+                  Replay
                 </a>
               </li>
+-->
             </ul>
           </li>
 
