rework guide into telemetry -> light (control) -> camera -> hardware camera flow

--- a/source/layouts/docs.erb
+++ b/source/layouts/docs.erb
@@ -249,7 +249,7 @@
               </li>
               <li>
                 <a href="/docs/devops/manually.html">
-                  Manually
+                  Running Servers Manually
                 </a>
               </li>
               <li>
