--- a/source/layouts/guides.erb
+++ b/source/layouts/guides.erb
@@ -22,25 +22,66 @@
               </div>
             </form>
           </li>
-          <li id="startTree">
+          <li id="temperatureTree">
             <a href="javascript:;">
             <i class="fa fa-lightbulb-o"></i>
 
             <span class="title">
-               Device Side Development
+               FIRST STEPS
             </span>
-            <span id="startSelected"></span>
-            <span id="startArrow"></span>
+            <span id="temperatureSelected"></span>
+            <span id="temperatureArrow"></span>
             </a>
             <ul class="sub-menu">
               <li>
-                <a href="/guides/device/index.html">
-                  Overview
+                <a href="/guides/temperature/setup.html">
+                  Setup
                 </a>
               </li>
               <li>
-                <a href="/guides/device/setup.html">
-                  Setup
+                <a href="/guides/temperature/thermometer.html">
+                  Thermometer
+                </a>
+              </li>
+              <li>
+                <a href="/guides/temperature/admin.html">
+                  Web Admin
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li id="lightTree">
+            <a href="javascript:;">
+            <i class="fa fa-lightbulb-o"></i>
+
+            <span class="title">
+                LIGHT DEVICE
+            </span>
+            <span id="lightSelected"></span>
+            <span id="lightArrow"></span>
+            </a>
+            <ul class="sub-menu">
+              <li>
+                <a href="/guides/light/light.html">
+                  Light
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li id="cameraTree">
+            <a href="javascript:;">
+            <i class="fa fa-lightbulb-o"></i>
+
+            <span class="title">
+                CAMERA DEVICE
+            </span>
+            <span id="cameraSelected"></span>
+            <span id="cameraArrow"></span>
+            </a>
+            <ul class="sub-menu">
+              <li>
+                <a href="/guides/camera/camera.html">
+                  Camera Device
                 </a>
               </li>
             </ul>
@@ -50,52 +91,59 @@
             <i class="fa fa-lightbulb-o"></i>
 
             <span class="title">
-                Server Side Development
+                HARDWARE DEVICES
             </span>
             <span id="deviceSelected"></span>
             <span id="deviceArrow"></span>
             </a>
             <ul class="sub-menu">
               <li>
-                <a href="/guides/serverside/index.html">
+                <a href="/guides/device/index.html">
                   Overview
+                </a>
+              </li>
+              <li>
+                <a href="/guides/device/raspberrysetup.html">
+                  Raspberry Pi Setup Guide
+                </a>
+              </li>
+              <li>
+                <a href="/guides/device/camera.html">
+                  Raspberry Pi Camera Device
                 </a>
               </li>
             </ul>
           </li>
+          <!--
           <li id="appsTree">
             <a href="javascript:;">
             <i class="fa fa-lightbulb-o"></i>
 
             <span class="title">
-                Dev Ops
+                APPLICATIONS
             </span>
             <span id="appsSelected"></span>
             <span id="appsArrow"></span>
             </a>
             <ul class="sub-menu">
               <li>
-                <a href="/guides/devops/index.html">
-                  Overview
+                <a href="/guides/apps/reactor.html">
+                  Camera Application
                 </a>
               </li>
               <li>
-                <a href="/guides/devops/manuallyrunserver.html">
-                  Manually Running Nitrogen
+                <a href="/guides/apps/timelapse.html">
+                  Timelapse Application
                 </a>
               </li>
               <li>
-                <a href="/guides/devops/vagrant.html">
-                  Running Nitrogen with Vagrant
-                </a>
-              </li>
-              <li>
-                <a href="/guides/devops/docker.html">
-                  Running Nitrogen with Docker
+                <a href="/guides/apps/web.html">
+                  Mosaic Web Application
                 </a>
               </li>
             </ul>
           </li>
+        -->
         <!-- END SIDEBAR MENU -->
       </div>
     </div>
