--- a/source/layouts/docs.erb
+++ b/source/layouts/docs.erb
@@ -152,6 +152,11 @@
                 </a>
               </li>
               <li>
+                <a href="/docs/schemas/humidity.html">
+                  humidity
+                </a>
+              </li>
+              <li>
                 <a href="/docs/schemas/image.html">
                   image
                 </a>
@@ -176,11 +181,6 @@
                   pressure
                 </a>
               </li>
-              <li>
-                <a href="/docs/schemas/switchCommand.html">
-                  switchCommand
-                </a>
-              </li>
               <!--
               <li>
                 <a href="/docs/schemas/reactorCommand.html">
@@ -189,8 +189,18 @@
               </li>
             -->
               <li>
+                <a href="/docs/schemas/switchCommand.html">
+                  switchCommand
+                </a>
+              </li>
+              <li>
                 <a href="/docs/schemas/temperature.html">
                   temperature
+                </a>
+              </li>
+              <li>
+                <a href="/docs/schemas/ultraviolet.html">
+                  ultraviolet
                 </a>
               </li>
             </ul>
